--- a/Paper/macros.tex
+++ b/Paper/macros.tex
@@ -144,13 +144,14 @@ morestring=[b]',
 \newcommand{\android}{\textsuperscript{$\dagger$\space}}
 \newcommand{\linux}{\textsuperscript{$\Diamond$\space}}
 
-\newcommand{\NumTotalApps}{36\space}
-\newcommand{\NumMobileApps}{12\space}
+\newcommand{\NumTotalApps}{41\space}
+\newcommand{\NumMobileApps}{20\space}
 \newcommand{\NumDesktopApps}{12\space}
-\newcommand{\NumSiblingpApps}{12\space}
+\newcommand{\NumSiblingpApps}{9\space}
 
 \newcommand{\MinNumReleases}{3\space}
-\newcommand{\TotalNumReleases}{288\space}
+\newcommand{\TotalNumReleases}{705\space}
+\newcommand{\TotalNumStatements}{3667\space}
 
 \newcommand{\RQOne}{\textbf{RQ1:} Do mobile applications exhibit more frequent releases than desktop applications?}
 \newcommand{\RQTwo}{\textbf{RQ2:} Do sibling applications' release cycles behave more like mobile or desktop apps?}
