--- a/Paper/summariesGrat.tex
+++ b/Paper/summariesGrat.tex
@@ -2,12 +2,12 @@
 % Fri Dec 12 15:19:53 2014
 \begin{table}[ht]
 \centering
-\caption{Cycle Summary} 
+\caption{Gratitude Summary} 
 \begin{tabular}{rrrr}
  mean & median & std & max \\ 
- 35.784 & 22.500 & 43.591 & 345.000 \\ 
+ 0.066 & 0.000 & 0.249 & 1.000 \\ 
    \hline
-51.473 & 30.000 & 69.928 & 606.000 \\ 
-  43.283 & 22.000 & 64.215 & 442.000 \\ 
+0.033 & 0.000 & 0.180 & 1.000 \\ 
+  0.050 & 0.000 & 0.237 & 2.000 \\ 
   \end{tabular}
 \end{table}
